# 65_videobox

./: .dockerignore  .env.container.example  .gitattributes  .gitignore  AGENTS.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml  requirements-container.txt  requirements-dev.txt  requirements-runtime.txt
.claude/: launch.json
docker/: api.Dockerfile  nginx.conf  web.Dockerfile  workspace-entrypoint.sh  workspace-nginx.conf  workspace-supervisor.py  workspace.Dockerfile
docs/: architecture-plan.ko.md  brollbox-reuse-audit.ko.md  development-context.ko.md  development-context.md  development-fast-path.ko.md  development-status-2026-06-29.ko.md  exact-preview-performance.ko.md  implementation-plan.ko.md  initial-architecture-and-folder-plan.ko.md  initial-architecture-and-folder-plan.md  llm-provider-strategy.ko.md  local-storage-strategy.ko.md  oss-adoption-map.ko.md  oss-research-and-scope-cut.ko.md  phase-6-preview-export-closeout.ko.md  product-plan.ko.md  provider-trace-audit-filter-closeout.ko.md  saas-expansion-design-notes.ko.md  saas-expansion-design-notes.md  session-context-2026-06-27.ko.md  session-context-2026-06-29-editing-session-explanation-tts.ko.md  session-context-2026-06-29-editing-session-validation.ko.md  session-context-2026-06-29-lightweight-editor-direction.ko.md  session-context-2026-06-29-provider-trace-filters.ko.md  session-context-2026-06-30-broll-override-clear.ko.md  session-context-2026-06-30-music-override-clear.ko.md  session-context-2026-06-30-music-override-parity.ko.md  session-context-2026-06-30-review-editor-handoff.ko.md  (+132 more)
(+638 files in other folders)
