[project]
name = "videobox"
version = "0.1.0"
description = "Local-first AI video editing engine skeleton for VideoBox"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_lmstudio: opt-in smoke test that may connect only to LM Studio at 127.0.0.1:1234",
]
